adjust to SYMBOL re-align fetures coreclty

--- a/app/scripts/templates/help.ejs
+++ b/app/scripts/templates/help.ejs
@@ -9,7 +9,7 @@
             </div>
             <div class="modal-body">
                 <p>
-                    The <a href="http://ensembl.ebi.com/vep" target="_TOP_">Ensembl Variant Effect Predictor</a> produces
+                    The <a href="http://www.ensembl.org/vep" target="_TOP_">Ensembl Variant Effect Predictor</a> produces
                     <code>
                         .vep
                     </code>
