replace the url for the ensembl REST service with the right one, no longer in beta

--- a/app/scripts/templates/configure.ejs
+++ b/app/scripts/templates/configure.ejs
@@ -15,7 +15,7 @@
                     <div class="form-group">
                         <label for="inputEmail3" class="col-sm-3 control-label">ensembl REST url</label>
                         <div class="col-sm-9">
-                            <input type="text" class="input form-control configure-param" name="url_ensembl_rest" placeholder="http://beta.rest.ensembl.org/sequence/id">
+                            <input type="text" class="input form-control configure-param" name="url_ensembl_rest" placeholder="http://rest.ensembl.org/sequence/id">
                         </div>
                     </div>
                     <div class="form-group">
@@ -30,4 +30,3 @@
         </div><!-- /.modal-content -->
     </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
-
