--- a/app/scripts/templates/help.ejs
+++ b/app/scripts/templates/help.ejs
@@ -14,7 +14,7 @@
                         .vep
                     </code>
                     files with, among others, protein positioned features of variant.
-                    We propose a tool to parse such an output, retrieve the protein sequence from <a href="http://beta.rest.ensembl.org/">Ensembl REST API</a>, and align the features on the sequence,grouped by categories.
+                    We propose a tool to parse such an output, retrieve the protein sequence from <a href="http://rest.ensembl.org/">Ensembl REST API</a>, and align the features on the sequence,grouped by categories.
                 </p>
                 <p>
                     <h4>Data sources</h4>
@@ -32,13 +32,13 @@
 
                     <h4>A note to developers</h4>
                         Clone the project, then <code>npm install</code> and <code>grunt server</code>. That should make it work!
-                        
+
                      <h4>Authors</h4>
                     This application is based on the versatile <a href="http://github.com/genentech/pviz">pViz.js: a dynamic JavaScript and SVG library for visualization of protein sequence features</a> JavaScript library, written by <a href="mailto://masselot.alexandre@gene.com">Alexandre Masselot</a> and <a href="mailto://mukhyala.kiran@gene.com">Kiran Mukhyala</a>, from the Bioinfromatics & Computational Biology Department, at <a href="http://www.gene.com">Genentech Inc.</a> Research. <h4>Reference</h4>
                     Please provide a reference to this application by citing:
                     <pre>xxx.xx 2014</pre>
                     <h4>Thanks to</h4>
-                    This app is aimed at demonstrating pViz library. But it would never have existed without a myriad of other useful an inspiring projects: <a href="http://d3js.org">d3.js</a>, 
+                    This app is aimed at demonstrating pViz library. But it would never have existed without a myriad of other useful an inspiring projects: <a href="http://d3js.org">d3.js</a>,
                         <a href="http://colorbrewer2.org/">color brewer</a> (and Mike Bostock <a href="http://bl.ocks.org/mbostock/5577023">implementation</a>), <a href="http://gruntjs.com/">grunt</a>, <a href="https://npmjs.org/package/bower">bower</a>, <a href="http://getbootstrap.com/css/">bootstrap</a>, <a href="http://jquery.com/">jquery</a> (and <a href="https://github.com/carhartl/jquery-cookie">$.cookie</a>, <a href="http://backbonejs.org/">backbone</a>, <a href="http://requirejs.org/">require.js</a>, <a href="http://underscorejs.org/">underscore</a>, <a href="http://twitter.github.io/typeahead.js/">typeahead</a>, <a href="http://misoproject.com/dataset/">Miso.dataset</a> and a few others.
 
                     <h4>Licence</h4>
